# Agentic-RAG

./: Dockerfile  README.md  data_scientist_cover_letter.txt  dev_setup.sh  docker-compose.yml  docker-compose2.yml  pyproject.toml  requirements.txt
archive/: app.py  app2.py  upload_files_app.py  upload_files_app2.py
src/: .env_example  app.py  ask_llm.py  base_models.py  extract_pdf.py  indexer.py  query_llm.py  retrievers.py
src/faiss_index/: index.faiss
